--- a/app/public/wp-content/plugins/vin-lms-core/composer.json
+++ b/app/public/wp-content/plugins/vin-lms-core/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Vinicius Rodrigues",
-            "email": "vinicius@example.com"
+            "email": "viniciusysrodrigues@gmail.com"
         }
     ],
     "require": {
